// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CopyLink > upon clicking it should copy the link to the clipboard, render a success message and change icon for half a second 1`] = `
"<button type="button" aria-label="Copy link to clipboard" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-files-public-link-copy-url">
  <!--v-if-->
  <!-- @slot Content of the button --> <span class="oc-icon" name="checkbox-circle" fill-type="line"></span>
</button>"
`;

exports[`CopyLink > upon clicking it should copy the link to the clipboard, render a success message and change icon for half a second 2`] = `
"<button type="button" aria-label="Copy link to clipboard" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-files-public-link-copy-url">
  <!--v-if-->
  <!-- @slot Content of the button --> <span class="oc-icon" name="file-copy" fill-type="line"></span>
</button>"
`;
